test/corpus/step_expressions.txt
=============|||
Step Expression Or Stuttering
=============|||

---- MODULE Test ----
op == [A]_B
====

--------------|||

(source_file (module (single_line) (identifier) (single_line)
  (unit (operator_definition
    (identifier) (def_eq)
    (step_expr_or_stutter (identifier_ref) (identifier_ref))
  ))
(double_line)))

=============|||
Step Expression No Stuttering
=============|||

---- MODULE Test ----
op == <<A>>_B
====

--------------|||

(source_file (module (single_line) (identifier) (single_line)
  (unit (operator_definition
    (identifier) (def_eq)
    (step_expr_no_stutter
      (langle_bracket) (identifier_ref) (rangle_bracket_sub) (identifier_ref)
    )
  ))
(double_line)))
