test/corpus/unicode/numbers-unicode.txt
=============|||
Unicode Number Sets
=============|||

---- MODULE Test ----
ℕ ≜ {}
ℤ ≜ {}
ℝ ≜ {}
====

-------------|||

(source_file (module (header_line) name: (identifier) (header_line)
  (operator_definition name: (identifier) (def_eq) definition: (finite_set_literal))
  (operator_definition name: (identifier) (def_eq) definition: (finite_set_literal))
  (operator_definition name: (identifier) (def_eq) definition: (finite_set_literal))
(double_line)))

